Bug 1432039 - Improve assumption of content process's back-end prefs r=jrmuizel